[project]
name = "pasteur"
version = "0.0.3"
authors = [
  { name="Kapenekakis Antheas", email="antheas@cs.aau.dk" },
]
description = "A system for reproducible and scalable data synthesis."
readme = "README_PYPI.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://pasteur.dev"
"Bug Tracker" = "https://github.com/pasteur-dev/pasteur/issues"

[tool.kedro]
package_name = "project"
project_name = "Pasteur Testing Project"
project_version = "0.18.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/pasteur -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy >= 1.15"]
build-backend = "setuptools.build_meta"